# Kielipankki-donatespeech-backend

./: .gitignore  README.md  STRUCTURE.md  generate-openapi.sh  serverless_build_spec.yml  setup-local.sh  supplementary_translations.py  translate_content.py
recorder-backend/: .coverage  .coveragerc  .gitignore  .tmp_roundtrip_compare.py  Dockerfile  README-FASTAPI.md  README.md  checker.py  cleanup-storage.py  common.py  configuration.py  content-authoring-template.xlsx  convert_excel_to_json.py  convert_schedule.py  docker-compose.yml  generate-openapi.sh  generate_excel_template.py  handler.py  init-storage.py  main.py  migrate-storage.py  models.py  nswag.example.json  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-fastapi.txt  requirements.txt  run_tests.sh  serverless-local.yml  serverless.yml  setup-local.sh  storage.py  test_default.py  test_models.py  test_prod_content.py  theme.py  uit-export.xlsx  (+1 more)
recorder-backend/app/: __init__.py  main.py  media_types.py  models.py  schedule_processing.py  settings.py  storage.py  utils.py  yle_utils.py
recorder-backend/app/routers/: content.py  media.py  upload.py
recorder-backend/content/dev/excel/: 2252a752-e06f-4c73-83cc-ff6d4f07cffd.xlsx  55d0dd12-7233-4be6-92a3-a7dc687871b1.xlsx  7c3a4ab5-bbcc-450f-b2d0-285499c6048d.xlsx  f5da01f4-7044-4f30-99e6-9aa6be201028.xlsx
recorder-backend/content/dev/schedules/: 18644e6b-2807-4047-88aa-f063c9d61a97.json  231ab28d-a442-4a78-8efb-9220bf01e933.json  (+2 more)
recorder-backend/custom_fleep/: __init__.py
recorder-backend/examples/: README.md  RecorderApiService.cs
recorder-backend/infra/prod/: main.bicep  main.bicepparam
recorder-backend/test/: 0b5cf885-5049-4e7a-83e0-05a63be53639.json  8d147f2c-9a3b-4e5d-b2c1-45a8f7e3c6d9.json  README.md  arvi-euroviisut.m4a  playlist.json  theme.json
recorder-backend/tests/: README.md  conftest.py  test_configuration.py  test_content_language_endpoints.py  test_convert_excel_to_json.py  test_generate_excel_template.py  test_handler.py  test_media_audio.py  test_media_image.py  test_media_text.py  test_media_types.py  test_media_video.py  test_media_yle_audio.py  test_media_yle_routes.py  test_media_yle_video.py  test_pre_process_schedule.py  test_prompt_choice.py  test_prompt_multi_choice.py  test_prompt_super_choice.py  test_prompt_text.py  test_storage_language_helpers.py  test_theme.py  test_upload.py  test_yle_utils.py
recorder-tooling/: .gitignore  README.md  cleanup-storage.py  cli.py  convert_excel_to_json.py  count_missing_translations.py  example-theme.csv  init-storage.py  init_storage.py  lang_json.py  migrate-storage.py  pyproject.toml  replace-itemid.py  test_prod_content.py  test_validate_content_json.py  validate_content_json.py
recorder-tooling/custom_fleep/: __init__.py
recorder-tooling/src/recorder_tooling/: __init__.py  cleanup_storage.py  cli.py  convert_excel_to_json.py  count_missing_translations.py  fill_schedule_uuids.py  init_storage.py  optimize_media_images.py  replace_itemid.py  validate_content_json.py
(+230 files in other folders)
