# This project uses uv for package management
# Install: https://github.com/astral-sh/uv
# Setup: uv sync
# Python binary: .venv/bin/python
# Activate venv: source .venv/bin/activate

[project]
name = "kielipankki-recorder-backend"
version = "2.0.0"
description = "FastAPI backend for Kielipankki speech donation recorder"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "openpyxl>=3.1.0",
    "azure-storage-blob>=12.29.0",
    "aiohttp>=3.13.5",
    "requests>=2.34.2",
    "PyYAML>=6.0",
    "pycryptodome>=3.19.0",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.25.0",  # For testing async endpoints
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
