[project]
name = "recorder-tooling"
version = "0.1.0"
description = "Tooling scripts for Kielipankki speech donation content management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "azure-storage-blob>=12.19.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
