[project]
name = "recorder-tooling"
version = "0.1.0"
description = "Tooling scripts for Kielipankki speech donation content management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "openpyxl>=3.1.0",
    "azure-storage-blob>=12.19.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
recorder-tooling = "cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "cli",
    "convert_excel_to_json",
    "init_storage",
    "cleanup_storage",
    "validate_content_json",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
